# plainwire

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  README.zh.md
docs/: http-framing.md
examples/: README.md  bare-lf-desync.http  cl-te-desync.http  clean-post.http  te-te-obfuscated.http
scripts/: smoke.sh
src/: annotate.rs  chunked.rs  cli.rs  craft.rs  findings.rs  framing.rs  hexdump.rs  json.rs  lib.rs  main.rs  message.rs  parser.rs  span.rs
tests/: cli.rs
